--- a/RK.html
+++ b/RK.html
@@ -9,18 +9,25 @@
 <body>
     <div class="navbar">
         <div class="navbar-logo">
-            <a href="/aboutus.html"> <img src="/urbanutopualogo.png" alt="logo" height="110px" width="110px"></a>
+            <a href="/aboutus.html">
+                <img src="/urbanutopualogo.png" alt="logo" height="60px" width="90px">
+            </a>
         </div>
-        <ul class="navbar-menu">
+        <ul class="navbar-menu" style="display: flex; align-items: center;">
             <li><a href="/index.html">Home</a></li>
             <li><a href="/RK.html">RK</a></li>
             <li><a href="/1bhk.html">1BHK</a></li>
+            <li>
+                <a href="/addHome.html" style="display: inline-block; align-items: center;">
+                    <img src="/home.png" alt="Add Home" height="50px" width="50px" style="margin-right: 5px;">
+                    <span style="display: block;"></span>
+                </a>
+            </li>
             <li><a href="/2bhk.html">2BHK</a></li>
             <li><a href="/3bhk.html">3BHK</a></li>
             <li><a href="#">Filter</a></li>
-            <li><a href="#">Contact Us</a></li>
         </ul>
-        
+    
         <!-- Add the search bar here -->
         <div class="navbar-search">
             <input type="text" placeholder="Search...">
