--- a/landing.html
+++ b/landing.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            background: linear-gradient(135deg, #333, #666);
+            background: linear-gradient(135deg, #120909, #ba1f1f);
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -31,6 +31,7 @@
         h1 {
             font-size: 48px;
             animation: fadeInUp 1s ease-in-out;
+            
         }
 
         section {
@@ -67,7 +68,7 @@
 
         footer {
             text-align: center;
-            background-color: #333;
+            background: linear-gradient(135deg, #120909, #ba1f1f);
             color: #fff;
             padding: 20px 0;
         }
@@ -90,7 +91,7 @@
         }
 
         button {
-            background-color: rgb(90, 89, 89);
+            background: linear-gradient(135deg, #120909, #ba1f1f);
             color: white;
             height: 100px;
             width: 150px;
