--- a/signup.html
+++ b/signup.html
@@ -92,7 +92,7 @@
 <body>
     <div class="registration-container">
         <h2>Register </h2>
-        <form id="registration-form">
+        <form id="registration-form" action="connect.php">
             <div class="form-group">
                 <label for="full-name">Full Name:</label>
                 <input type="text" id="full-name" name="full-name" placeholder="Your Full Name" required>
