--- a/1bhk.html
+++ b/1bhk.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-
+<!-- adding a comment -->
     <div class="navbar">
         <div class="navbar-logo">
             <a href="/aboutus.html">
